# stokbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  architecture.md  deployment.md  development.md  llm-analysis.md  reddit-integration.md  security.md  setup.md  slack-bot.md  storage.md  troubleshooting.md  two-phase-api.md  usage.md
src/reddit_listener/: __init__.py  __main__.py  config.py
src/reddit_listener/analysis/: __init__.py  llm.py
src/reddit_listener/core/: __init__.py  research.py  sync_wrapper.py
src/reddit_listener/reddit/: __init__.py  client.py  rate_limiter.py  relevance.py  retry.py
src/reddit_listener/slack/: __init__.py  app.py  blocks.py  oauth_callback.py
src/reddit_listener/storage/: __init__.py  base.py  sqlite.py
