[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-listener"
version = "0.1.2"
description = "Reddit research tool with Slack Bot integration and LLM analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Prateek Jain", email = "prateekjain6342@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core dependencies - required for research functionality
dependencies = [
    "asyncpraw>=7.7.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.17.0,<0.18.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Repository = "https://github.com/prateekjain6342/stokbot"

[project.optional-dependencies]
# Slack bot functionality - optional for library consumers
slack = [
    "slack-bolt>=1.18.0",
]

# Development dependencies
dev = [
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

# All optional dependencies for complete functionality
all = [
    "slack-bolt>=1.18.0",
]

[project.scripts]
reddit-listener = "reddit_listener.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
